--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -8,7 +8,7 @@ body {
 }
 
 /* grid 960px */
-.linha{
+.linha {
   width: 960px;
   margin: 0 auto;
   /* deixa centralizado, no meio da pagina */
@@ -17,7 +17,8 @@ body {
   padding: 0;
   /* espassamento entre linhas */
 }
-.coluna{
+
+.coluna {
   padding: 0 10px;
   /*espassamento entre colunas, isso influi na conta dos 960px, que dividido por
   12 da 80, menos 10 de cada lado da 60*/
@@ -26,52 +27,62 @@ body {
 
 /* com esse espassamento definimos aqui abaixo o tamanho de cada coluna: */
 
-.col1{
+.col1 {
   /*width: 60px;*/
-    width: 6.25%;
+  width: 6.25%;
 }
 
-.col2{
+.col2 {
   /*width: 140px;*/
   width: 14.583333%;
 }
-.col3{
+
+.col3 {
   /*width: 220px;*/
   width: 22.916667%;
 }
-.col4{
+
+.col4 {
   /*width: 300px;*/
   width: 31.25%;
 }
-.col5{
+
+.col5 {
   /*width: 380px;*/
   width: 39.583333%;
 }
-.col6{
+
+.col6 {
   /*width: 460px;*/
   width: 47.916667%;
 }
-.col7{
+
+.col7 {
   /*width: 540px;*/
   width: 56.25%;
 }
-.col8{
+
+.col8 {
   /*width: 620px;*/
   width: 64.583333%;
 }
-.col9{
+
+.col9 {
   /*width: 700px;*/
   width: 72.916667%;
 }
-.col10{
+
+.col10 {
   /*width: 780px;*/
   width: 81.25%;
 }
-.col11{
+
+.col11 {
   /*width: 860px;*/
   width: 89.583333%;
 }
-.col12{
+
+.col12 {
   /*width: 940px;*/
   width: 97.916667%;
 }
@@ -90,17 +101,18 @@ nav {
 
 
 nav ul {
-    list-style-type: none;
-    /*padding: 0;*/
+  list-style-type: none;
+  /*padding: 0;*/
 }
 
 nav ul li {
-    padding-right: 3vw;
-    display: inline;
-    font-size: 1.2vw;
+  padding-right: 3vw;
+  display: inline;
+  font-size: 1.2vw;
 }
 
-ul.inline li:last-child, ol.inline li:last-child{
+ul.inline li:last-child,
+ol.inline li:last-child {
   margin-right: 0;
   /* o ultimo li em linha tanto de ul quanto ol tem que ter margem sempre 0! */
 }
@@ -161,18 +173,18 @@ span {
 }
 
 
-img{
+img {
   max-width: 100%;
   height: auto;
   /* com isso ja ajeita as img dentro do site */
 }
 
 footer {
-   overflow: hidden;
-   text-align: center;
-   clear: both;
-   color: #fff;
-   padding-top: 10px;
+  overflow: hidden;
+  text-align: center;
+  clear: both;
+  color: #fff;
+  padding-top: 10px;
 }
 
 .footer {
@@ -187,8 +199,9 @@ footer {
   margin: 10px 0 0 0;
 }
 
-.myprivacy, .mycv {
-    padding: 15px;
+.myprivacy,
+.mycv {
+  padding: 15px;
 }
 
 a {
@@ -204,12 +217,14 @@ nav ul li a:hover {
   color: #5a3d08;
 }
 
-.myprivacy a, .mycv a{
-    color: #fff;
+.myprivacy a,
+.mycv a {
+  color: #fff;
 }
 
-.myprivacy a:hover, .mycv a:hover{
-    color: yellow;
+.myprivacy a:hover,
+.mycv a:hover {
+  color: yellow;
 }
 
 /*here starts the ABOUT page*/
@@ -222,7 +237,8 @@ nav ul li a:hover {
   height: auto;
 }
 
-.whatido, .howdid {
+.whatido,
+.howdid {
   background-color: #fcfafaed;
   background-repeat: no-repeat;
   background-size: cover;
@@ -245,7 +261,9 @@ nav ul li a:hover {
   font-size: 3.3vw;
   color: #b92f16;
 }
-.myh3, .myh4 {
+
+.myh3,
+.myh4 {
   color: black;
   font-weight: bold;
 }
@@ -278,12 +296,13 @@ nav ul li a:hover {
   font-size: 1.3vw;
 }
 
-.myknowledge, .myexperience,
+.myknowledge,
+.myexperience,
 .myeducation {
-    background-color: #fcfafaed;
-    border-radius: 30px;
-    border: double;
-    color: black;
+  background-color: #fcfafaed;
+  border-radius: 30px;
+  border: double;
+  color: black;
 }
 
 .myknowledge {
@@ -295,98 +314,93 @@ nav ul li a:hover {
   float: right;
 }
 
-.myexperience a, .myeducation a {
+.myexperience a,
+.myeducation a {
   color: #fa0606;
 }
 
-.myexperience ul li, .myeducation ul li {
+.myexperience ul li,
+.myeducation ul li {
   font-size: 1.4vw;
   font-weight: bold;
 }
 
 .myeducation {
-    float: right;
-    margin: 15px 0;
+  float: right;
+  margin: 15px 0;
 }
 
 .sk {
-      font-size: 3vmin;
-      font-weight: bold;
-  }
+  font-size: 3vmin;
+  font-weight: bold;
+}
 
-  #bar {
-      width: 80%;
-      height: 20px;
-      border-radius: 10px;
-      background-color: rgba(0, 26, 21, 0.4);
-  }
+#bar {
+  width: 80%;
+  height: 20px;
+  border-radius: 10px;
+  background-color: rgba(0, 26, 21, 0.4);
+}
 
-  #fill {
-      width: 45%;
-      height: 20px;
-      border-radius: 10px;
-      background-color: rgba(0, 26, 21, 0.6);
-  }
+#fill {
+  width: 100%;
+  height: 20px;
+  border-radius: 10px;
+  background-color: rgba(0, 26, 21, 0.6);
+}
 
-  #fill1 {
-      width: 45%;
-      height: 20px;
-      border-radius: 10px;
-      background-color: rgba(0, 26, 21, 0.6);
-  }
+#fill1 {
+  width: 90%;
+  height: 20px;
+  border-radius: 10px;
+  background-color: rgba(0, 26, 21, 0.6);
+}
 
-  #fill2 {
-      width: 10%;
-      height: 20px;
-      border-radius: 10px;
-      background-color: rgba(0, 26, 21, 0.6);
-  }
+#fill2 {
+  width: 85%;
+  height: 20px;
+  border-radius: 10px;
+  background-color: rgba(0, 26, 21, 0.6);
+}
 
-  #fill3 {
-      width: 90%;
-      height: 20px;
-      border-radius: 10px;
-      background-color: rgba(0, 26, 21, 0.6);
-  }
+#fill3 {
+  width: 80%;
+  height: 20px;
+  border-radius: 10px;
+  background-color: rgba(0, 26, 21, 0.6);
+}
 
-  #fill4 {
-      width: 90%;
-      height: 20px;
-      border-radius: 10px;
-      background-color: rgba(0, 26, 21, 0.6);
-  }
+#fill4 {
+  width: 75%;
+  height: 20px;
+  border-radius: 10px;
+  background-color: rgba(0, 26, 21, 0.6);
+}
 
-  #fill5 {
-      width: 80%;
-      height: 20px;
-      border-radius: 10px;
-      background-color: rgba(0, 26, 21, 0.6);
-  }
+#fill5 {
+  width: 60%;
+  height: 20px;
+  border-radius: 10px;
+  background-color: rgba(0, 26, 21, 0.6);
+}
 
-  #fill6 {
-      width: 45%;
-      height: 20px;
-      border-radius: 10px;
-      background-color: rgba(0, 26, 21, 0.6);
-  }
+#fill6 {
+  width: 50%;
+  height: 20px;
+  border-radius: 10px;
+  background-color: rgba(0, 26, 21, 0.6);
+}
 
-  #fill7 {
-      width: 100%;
-      height: 20px;
-      border-radius: 10px;
-      background-color: rgba(0, 26, 21, 0.6);
-  }
+#fill7 {
+  width: 10%;
+  height: 20px;
+  border-radius: 10px;
+  background-color: rgba(0, 26, 21, 0.6);
+}
 
-  #fill8 {
-      width: 95%;
-      height: 20px;
-      border-radius: 10px;
-      background-color: rgba(0, 26, 21, 0.6);
-  }
-
-  .procent {
-    text-align: center;
-    color: white;
+.procent {
+  text-align: center;
+  color: white;
 }
 
 .dci {
@@ -462,7 +476,8 @@ _________________________________________________________________*/
   padding: 50px 0;
 }
 
-.mybrief, .myinterest {
+.mybrief,
+.myinterest {
   color: black;
   font-size: 1.5em;
 }
@@ -493,10 +508,10 @@ _________________________________________________________________*/
 }
 
 #msg {
-    width: 90%;
-    height: auto;
-    font-size: 1em;
-    color: red;
+  width: 90%;
+  height: auto;
+  font-size: 1em;
+  color: red;
 }
 
 .botao {
@@ -532,7 +547,7 @@ _________________________________________________________________*/
 }
 
 .linha::after {
-content: "";
-clear: both;
-display: table;
+  content: "";
+  clear: both;
+  display: table;
 }
