--- a/portfolio/src/css/App.css
+++ b/portfolio/src/css/App.css
@@ -91,6 +91,17 @@ body {
 
 /* estilos reutilizaveis */
 
+.homeWrapper {
+  height: 100vh;
+}
+
+.myNav {
+  position: fixed;
+  background: #fff;
+  z-index: 1000;
+  width: 100%;
+}
+
 .header {
   width: 100%;
   height: auto;
@@ -128,6 +139,10 @@ hr {
   margin: 0;
 }
 
+.home {
+  height: 100vh;
+}
+
 .mytext {
   padding-top: 12%;
 }
@@ -160,12 +175,16 @@ span {
   text-align: center;
 }
 
+.photoDiv {
+  height: 100vh;
+}
+
 .myphoto {
   float: left;
   width: 60%;
   padding-top: 0;
   max-width: 100%;
-  height: auto;
+  height: -webkit-fill-available;
 }
 
 
@@ -231,22 +250,29 @@ nav ul li a:hover {
 /*here starts the ABOUT page*/
 
 .myabout {
-  background-image: url(../img/coffe.png);
-  background-repeat: no-repeat;
+  /* background-image: url(../img/coffe.png); */
+  /* background-repeat: no-repeat;
+  background-size: cover; */
+  /* background: linear-gradient(to left, rgb(19, 19, 20), #fff); */
+  /* background: #282c34; */
+  background: #10162f;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   background-size: cover;
-  width: 100%;
-  height: auto;
+  color: #fff;
 }
 
 .whatido,
 .howdid,
 .myMainStack {
-  background-color: #fcfafaed;
+  /* background-color: #fcfafaed; */
+  background: #141e3b;
   background-repeat: no-repeat;
   background-size: cover;
   border-radius: 3vw;
-  border: double;
-  color: black;
+  border: 1px solid #2d5dcc;
+  color: #fff;
   padding: 29px 0;
   text-align: center;
   margin: 30px 0;
@@ -263,11 +289,19 @@ nav ul li a:hover {
 }
 
 .whatido {
-  height: 130px;
+  height: 30vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .howdid {
-  height: 200px;
+  height: 50vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .mainStack {
@@ -300,23 +334,221 @@ nav ul li a:hover {
 
 .myh2 {
   font-size: 2.3vw;
-  color: #b92f16;
+  /* color: rgb(250, 200, 99); */
+  color: #4fe0b0;
+  ;
   margin: 10px 0;
 }
 
-.myh3,
 .myh4 {
-  color: black;
-  font-weight: bold;
+  color: #66d9ef;
+  letter-spacing: 0.1rem;
+  font-weight: normal;
   margin: 10px;
 }
 
 .myh3 {
   font-size: 2.2vw;
+  /* color: rgb(252, 146, 158); */
+  color: #4fe0b0;
+  margin: 10px;
 }
 
 .myh4 {
   font-size: 1.5vw;
+}
+
+/* ============================================= */
+/* ======== Here starts SKILLS section ========= */
+/* ============================================= */
+
+.mySkills {
+  background: antiquewhite;
+  height: 100vh;
+}
+
+.myh2skill {
+  margin-bottom: 6rem
+}
+
+.sk {
+  font-size: 3vmin;
+  font-weight: bold;
+}
+
+.skills-ul {
+  height: 400px;
+  display: flex;
+  margin-bottom: 60px;
+  list-style: none;
+  padding-inline-start: 0;
+
+}
+
+.myliskill {
+  width: 100%;
+  height: 20px;
+  border-radius: 10px;
+  position: relative;
+  top: 370px;
+  right: -54px;
+  display: block;
+  font-size: 1em;
+  line-height: 0.8rem;
+  -webkit-transform: rotate(50deg);
+  -webkit-transform-origin: 100% 0;
+  -moz-transform: rotate(50deg);
+  -moz-transform-origin: 100% 0;
+  -ms-transform: rotate(50deg);
+  -ms-transform-origin: 100% 0;
+  -o-transform: rotate(50deg);
+  -o-transform-origin: 100% 0;
+  transform: rotate(50deg);
+  transform-origin: 100% 0;
+  width: 200px;
+  text-align: right;
+  font-weight: 600;
+  color: #33459e;
+}
+
+.graphic-bar-1,
+.graphic-bar-2,
+.graphic-bar-3,
+.graphic-bar-4,
+.graphic-bar-5 {
+  position: relative;
+  width: 100vw;
+  /* right: 21vw; */
+  color: rgba(0, 26, 21, 0.6);
+}
+
+.graphic-bar-1 {
+  top: -8.8rem;
+}
+
+.graphic-bar-2 {
+  top: -12.900rem;
+}
+
+.graphic-bar-3 {
+  top: -17.155rem;
+}
+
+.graphic-bar-4 {
+  top: -21.32rem;
+}
+
+.graphic-bar-5 {
+  top: -25.3rem;
+}
+
+
+#bar {
+  width: 100%;
+  height: 80%;
+  display: flex;
+  align-items: flex-end;
+  /* border-radius: 10px;
+  background-color: rgba(157, 177, 173, 0.4); */
+}
+
+#fill,
+#fill1,
+#fill2,
+#fill3,
+#fill4,
+#fill5,
+#fill6,
+#fill7 {
+  height: 20px;
+  border-radius: 10px;
+  background: linear-gradient(to left, #d46060, #1D3B8B);
+  /* background: linear-gradient(to left, #3DBAF7, #1D3B8B); */
+  width: 100%;
+  z-index: 2;
+}
+
+#fill {
+  width: 100%;
+  height: 80%;
+}
+
+#fill1 {
+  width: 100%;
+  height: 70%;
+}
+
+#fill2 {
+  width: 100%;
+  height: 60%;
+}
+
+#fill3 {
+  width: 100%;
+  height: 50%;
+}
+
+#fill4 {
+  width: 100%;
+  height: 40%;
+}
+
+#fill5 {
+  width: 100%;
+  height: 30%;
+}
+
+#fill6 {
+  width: 100%;
+  height: 20%;
+}
+
+#fill7 {
+  width: 100%;
+  height: 10%;
+}
+
+.procent {
+  text-align: center;
+  color: #fff;
+}
+
+
+.graphic-level-1,
+.graphic-level-2,
+.graphic-level-3,
+.graphic-level-4,
+.graphic-level-5 {
+  position: relative;
+  top: 18.8rem;
+  left: 1.3rem;
+  width: 8rem;
+}
+
+.graphic-level-2 {
+  top: 12.1rem;
+}
+
+.graphic-level-3 {
+  top: 5.1rem;
+}
+
+.graphic-level-4 {
+  top: -0.4rem;
+}
+
+.graphic-level-5 {
+  top: -6.8rem;
+}
+
+.blackSpan {
+  font-weight: 600;
+}
+
+.darth-vader {
+  position: absolute;
+  top: -1rem;
+  left: 7rem;
 }
 
 /* ________________________________________________________________
