--- a/portfolio/src/css/App.css
+++ b/portfolio/src/css/App.css
@@ -122,6 +122,11 @@ nav ul {
   /*padding: 0;*/
 }
 
+.nav-li:hover {
+  color: red;
+  cursor: pointer;
+}
+
 nav ul li {
   padding-right: 3vw;
   display: inline;
